<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"

    tools:context=".fragment.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custombutton"
            android:gravity="center"
            android:text="Personal Data"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="50dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/custombutton">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="Mail : "
                    android:textSize="25sp"

                    />

                <EditText

                    android:id="@+id/inputEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custombutton2"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:padding="5dp"
                    android:singleLine="true" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="70dp"
                    android:text="Name : "
                    android:textSize="25sp" />


                <EditText

                    android:id="@+id/inputUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/custombutton2"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:padding="5dp"
                    android:singleLine="true" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="110dp"
                    android:text="Age : "
                    android:textSize="25sp" />


                <EditText

                    android:id="@+id/inputUserBirthDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="110dp"
                    android:background="@drawable/custombutton2"
                    android:gravity="center"
                    android:hint="@string/birth_date"
                    android:padding="5dp"
                    android:inputType="date"

                    android:singleLine="true" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/gender"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="150dp"
                    android:text="Gender : "
                    android:textSize="25sp" />

                <RadioGroup
                    android:id="@+id/genderRadioBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checkedButton="@id/male"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/height"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="190dp"
                    android:text="Height (cm) : "
                    android:textSize="25sp" />

                <EditText

                    android:id="@+id/inputUserHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="190dp"
                    android:background="@drawable/custombutton2"
                    android:gravity="center"
                    android:hint="Height"
                    android:inputType="number"
                    android:padding="5dp"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/weight"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="230dp"
                    android:text="Weight (kg) : "
                    android:textSize="25sp" />

                <EditText

                    android:id="@+id/inputUserWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="230dp"
                    android:background="@drawable/custombutton2"
                    android:gravity="center"
                    android:hint="Weight"
                    android:inputType="number"
                    android:padding="5dp"
                    android:singleLine="true"/>

            </LinearLayout>


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/custombutton"
                android:hint="Update data"
                android:textAllCaps="false"
                android:textColorHint="@color/white" />

            <ProgressBar
                android:id="@+id/progressBarUpdate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="invisible" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/disconnect_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/custombutton"
                android:hint="Disconnect"
                android:textAllCaps="false"
                android:textColorHint="@color/white" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="invisible" />


        </FrameLayout>

    </LinearLayout>


</FrameLayout>